--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,3 +3,7 @@ spring:
     name: currency-exchange-service
 server:
   port: 8000
+eureka:
+  client:
+    service-url:
+      default-zone: http://localhost:8761/eureka
